# toroidal-sneks-submission

./: README.md  pyproject.toml  requirements.txt
src/examples/: cautiously_random.py  looking_up.py  spell_sneks.py  stair_climber.py
src/scripts/: __init__.py  config.py
src/submission/: submission.py
